feat: Configure Electron to use `out/main/index.js` as the main entry point and include compiled output in the build, and ignore `package-lock.json`.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -2,7 +2,10 @@ appId: com.electron.app
 productName: gemini-hud
 directories:
   buildResources: build
+extraMetadata:
+  main: out/main/index.js
 files:
+  - out/**/*
   - '!**/.vscode/*'
   - '!src/*'
   - '!electron.vite.config.{js,ts,mjs,cjs}'
