--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -17,7 +17,7 @@ asarUnpack:
 win:
   executableName: gemini-hud
 nsis:
-  artifactName: ${name}-${version}-setup.${ext}
+  artifactName: ${name}-setup.${ext}
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
   createDesktopShortcut: always
